--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "dev": "webpack --config ./webpack.config.js"
   },
   "dependencies": {
+    "@types/nprogress": "^0.2.0",
+    "axios": "^0.21.1",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "vh-check": "^2.0.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
