--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   "dependencies": {
     "@types/nprogress": "^0.2.0",
     "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "bootstrap-icons": "^1.3.0",
+    "jquery": "^3.5.1",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
+    "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
     "vh-check": "^2.0.5",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
